<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_margin"
    tools:context="dev.mrodriguezul.contacto.MainActivity">

    <ScrollView
        android:id="@+id/srv_contenedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                style="@style/text_welcome"
                android:text="Contacto"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_contacto_nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/label_nombre" />
            </android.support.design.widget.TextInputLayout>

            <DatePicker
                android:id="@+id/dtp_contacto_fecnac"
                android:layout_width="match_parent"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                android:layout_height="wrap_content"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_contacto_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@+id/et_contacto_email"
                    android:inputType="phone"
                    android:hint="@string/label_tel" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_contacto_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nextFocusDown="@+id/et_contacto_descripcion"
                    android:inputType="textEmailAddress"
                    android:hint="@string/label_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/et_contacto_descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionDone"
                    android:hint="@string/label_descripcion" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/btn_siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/btn_theme"
                android:id="@+id/btn_siguiente" />

        </LinearLayout>

    </ScrollView>



</RelativeLayout>
